mobileblurb overflow fix

--- a/src/components/MobilePage.css
+++ b/src/components/MobilePage.css
@@ -244,7 +244,7 @@ button:active .navbtnsvg .navbtns {
     min-height: fit-content;
   }
   .mobileSeniorPic {
-    width: 35vh;
-    height: 35vh;
+    width: 30vh;
+    height: 30vh;
   }
 }
